objects/CPQ_Special_Pricing_Approval_Process__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>for CPQ Special Pricing Approval Process</description>
    <fields>
        <fullName>FieldLabel__c</fullName>
        <label>FieldLabel</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_OUT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if it is input Item</description>
        <label>IN/OUT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CPQ Special Pricing Approval Process</label>
</CustomObject>